@@ -1,3 +1,8 @@
+2004-10-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/17132
+	* g++.dg/template/memclass3.C: New test.
+
 2004-10-27  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/18140
